--- a/tutor/templates/tutor/index.html
+++ b/tutor/templates/tutor/index.html
@@ -15,7 +15,7 @@
       {%for new in news%}
       <h2>{{new.titolo}} </h2>
       <div class="new">
-      {{new.testo|linebreaks}}
+      {{new.testo|safe}}
       </div>
       {%endfor%}
 </div>
