correzione allegato in dettaglio proposta

--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -64,7 +64,7 @@
             <td><span class=label>Descrizione:</span></td><td>{{proposta.descrizione|linebreaks|default:""}}</td>
         </tr>
         <tr>
-            <td>Allegato: </td> <td>{{allegato|default:''}}</td>
+            <td>Allegato: </td> <td>{{proposta.allegato|default:''}}</td>
         </tr>
     </table>  
     <hr>
