casino con le new

--- a/openday/templates/openday/index.html
+++ b/openday/templates/openday/index.html
@@ -13,7 +13,7 @@
 
 <div class="w3-container">
      
-      {%for new in news%}
+      {%for new in novita%}
       <h2>{{new.titolo}} </h2>
       <div class="new">
       {{new.testo|safe}}
