--- a/openday/templates/openday/index.html
+++ b/openday/templates/openday/index.html
@@ -1,4 +1,5 @@
 {%extends 'openday/base.html' %}
+{%load 'static' %}
 
 {%block head %}
 
@@ -13,6 +14,8 @@
 
 <div class="w3-container">
      
+      <img src="{%static 'openday/volantino.png' %}">
+
       {%for new in novita%}
       <h2>{{new.titolo}} </h2>
       <div class="new">
