--- a/openday/templates/openday/index.html
+++ b/openday/templates/openday/index.html
@@ -14,7 +14,7 @@
 
 <div class="w3-container">
      
-      <img src="/orienta/openday/static/openday/volantino.png">
+      <img src="{% static 'volantino.png' %}">
 
       {%for new in novita%}
       <h2>{{new.titolo}} </h2>
