--- a/openday/templates/openday/index.html
+++ b/openday/templates/openday/index.html
@@ -2,7 +2,7 @@
 {%load static %}
 
 {%block head %}
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
      
       h2   {text-align:center; color: blue;}
