menu autenticazioni e indirizzi

--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -65,9 +65,24 @@
             </div>
 
             <div class="w3-dropdown-hover">
+                <button class="w3-button">Indirizzi</button>
+                <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                    <a href="" class="w3-bar-item w3-button ">Liceo Scienze Applicate</a>
+                    <a href="" class="w3-bar-item w3-button ">Liceo Sportivo</a>
+                    <a href="" class="w3-bar-item w3-button ">Affari Finanza e Marketing</a>
+                    <a href="" class="w3-bar-item w3-button ">Turistico</a>
+                    <a href="" class="w3-bar-item w3-button ">Agro Alimentare</a>
+
+                </div>
+            </div>
+
+            <div class="w3-dropdown-hover">
                 <button class="w3-button">Autenticazione</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     <a href="{%url 'admin:index'%}" class="w3-bar-item w3-button ">Admin</a>
+                    <a href="" class="w3-bar-item w3-button ">Login</a>
+                    <a href="" class="w3-bar-item w3-button ">Logout</a>
+                    <a href="" class="w3-bar-item w3-button ">Cambio Password</a>
                 </div>
             </div>
         </div>
