controllo su cancellami tutor

--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -22,6 +22,7 @@
     }
 
     function cancellami(id) {
+        // cancella il tutor corrente dei referenti interni
         url = "/orienta/tutor/cancellami/"+id
         document.location = url;
     }
