--- a/openday/templates/openday/iscrizione.html
+++ b/openday/templates/openday/iscrizione.html
@@ -5,34 +5,47 @@
        #id_scuola, #id_comune {width: 100%}
        
    </style>
+   <script>
+        function iscrivimi() {
+            var privacy = document.getElementById('privacy');
+            if (privacy.checked)
+                document.getElementById('myForm').submit();
+            else 
+                alert("Autorizzare il trattamento dei dati, selezionando l'apposita casella ");
+
+        }
+   </script>
 {%endblock %}
 
 {% block content %}
 <div class="w3-container" style="text-align:center">
 <h2>Iscrizione Open Day <h2> 
 <h4> Indirizzo: {{evento.titolo}} {{evento.data}}</h4>
-<form method="post">
+<form method="post" id="myForm">
     {% csrf_token %}
     <input type="hidden" name = value="{{evento.id}}">
     <table class="w3-table w3-light-green" style="width:400px; margin: auto">
        <tr>
           <td>*COGNOME:</td>
           <td>{{form.cognome}}</td>
-          <td>NOME:</td>
+          <td>*NOME:</td>
           <td>{{form.nome}}</td>
+       </tr>
+       <tr>
+        <td>*COMUNE DI PROVENIENZA:</td>
+        <td colspan="3">{{form.comune}}</td>
        </tr>
        <tr>
            <td>SCUOLA DI PROVENIENZA:</td>
            <td colspan="3">{{form.scuola}}</td>
        </tr>
-       <tr>
-        <td>COMUNE DI PROVENIENZA:</td>
-        <td colspan="3">{{form.comune}}</td>
-    </tr>
-
     </table>
     <p></p>
-    <button style="font-size: 24;" class=w3-blue type="submit">Iscrivimi</button>
+    <button style="font-size: 24;" class=w3-blue onClick="iscrivimi()">Iscrivimi</button>
 </form>
+I dati forniti sarenno gestiti in conformità con la normativa sulla privacy <br>
+Se si desidera essere rimossi dal database o per annullare la prenotazione, scrivere una mail a linda.ciano@mapelli-monza.edu.it <br>
+<input id="privacy" type="checkbox">Accosento al trattamento dei dati forniti <p>
+* i campi contrassegnati sono obbligatori
 </div>
 {%endblock%}
