button type=button

--- a/openday/templates/openday/iscrizione.html
+++ b/openday/templates/openday/iscrizione.html
@@ -13,7 +13,7 @@
                 alert("Autorizzare il trattamento dei dati, selezionando l'apposita casella ");
                 return;
             }
-            // myform.submit();
+            myform.submit();
         }
    </script>
 {%endblock %}
@@ -42,7 +42,7 @@
        </tr>
     </table>
     <p></p>
-    <button style="font-size: 24;" class=w3-blue onClick="iscrivimi()">Iscrivimi</button>
+    <button type=button style="font-size: 24;" class=w3-blue onClick="iscrivimi()">Iscrivimi</button>
 </form>
 I dati forniti sarenno gestiti in conformità con la normativa sulla privacy <br>
 Se si desidera essere rimossi dal database o per annullare la prenotazione, scrivere una mail a linda.ciano@mapelli-monza.edu.it <br>
