--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -71,12 +71,9 @@
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Indirizzi</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                    <a href="" class="w3-bar-item w3-button ">Liceo Scienze Applicate</a>
-                    <a href="" class="w3-bar-item w3-button ">Liceo Sportivo</a>
-                    <a href="" class="w3-bar-item w3-button ">Affari Finanza e Marketing</a>
-                    <a href="" class="w3-bar-item w3-button ">Turistico</a>
-                    <a href="" class="w3-bar-item w3-button ">Agro Alimentare</a>
-
+                    {%for indirizzo in indirizzi %}
+                    <a href="indirizzi/{{indirizzo.titolo}}" class="w3-bar-item w3-button ">{{indirizzo.titolo}}</a>
+                    {%endfor%}
                 </div>
             </div>
 
