descrizione in pagina indirizzo

--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -17,7 +17,7 @@
     <img src="{{pagina.immagine}}">
     <h2>{{pagina.titolo}}</h2>
     <div class="testo">
-        {{descrizione|safe}}
+        {{pagina.descrizione|safe}}
     </div>
      
 </div>
