--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-<div class="w3-container" style="text-align:center">
+<div class="w3-container" style="text-align:left; width:75%; margin:auto;">
     <img src="{{pagina.immagine}}">
     <h2>{{pagina.titolo}}</h2>
     <div class="testo">
