--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -14,7 +14,7 @@
 {% block content %}
 
 <div class="w3-container" style="text-align:left; width:75%; margin:auto;">
-    <img src="{{pagina.banner}}" alt="{{pagina.banner}}">
+    <img src="/{{pagina.banner}}" alt="{{pagina.banner}}">
     <h2>{{pagina.titolo}}</h2>
     <div class="testo">
         {{pagina.descrizione|safe}}
