--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -14,7 +14,7 @@
 {% block content %}
 
 <div class="w3-container" style="text-align:left; width:75%; margin:auto;">
-    <img src='orienta/{{pagina.banner}}'>
+    <img src='/orienta/{{pagina.banner}}'>
     <h2>{{pagina.titolo}}</h2>
     <div class="testo">
         {{pagina.descrizione|safe}}
