--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -59,14 +59,24 @@
                 <button class="w3-button">Iscrizioni</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     {% for evento in eventi %}
-                    <a href="iscrivi_utente/{{evento.sigla}} " class="nostyle"> <button class="w3-bar-item w3-button ">{{evento.titolo}} {{evento.data}}</a>
+                    <a href="iscrivi_utente/{{evento.sigla}} " class="nostyle"> 
+                        <button class="w3-bar-item w3-button ">{{evento.titolo}} {{evento.data}} </button></a>
                     {%endfor%}
-
-                    {% if user.is_authenticated %}  
-                    <a href=""> <button class="w3-bar-item w3-button">Iscritti</button></a>
-                    {% endif %}
                 </div>
             </div>
+
+            {% if user.is_authenticated %}  
+            <div class="w3-dropdown-hover">
+                <button class="w3-button">Arrivi</button>
+                <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                    {% for evento in eventi %}
+                    <a href="rileva_presenze/{{evento.sigla}}" class="w3-bar-item w3-button "> 
+                        {{evento.titolo}} {{evento.data}}
+                    </a> 
+                    {%endfor%}
+                </div>
+            </div>
+            {% endif %}
 
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Indirizzi</button>
