titolo di rileva presenze

--- a/openday/templates/openday/presenze.html
+++ b/openday/templates/openday/presenze.html
@@ -20,7 +20,7 @@
 <h2>Rilevazione Presenze</h2>
 <div class="w3-container" style="text-align:left; width:75%; margin:auto;">
 
-    <h4>{{iscritti.0.evento.titolo}} : {{iscritti.0.evento.data}}</h4>
+    <h4>{{titolo}} : {{data}}</h4>
 
 <form id = myForm method="post">
     {% csrf_token %}
