--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -19,7 +19,7 @@
     <div class="testo">
         {{pagina.descrizione|safe}}
     </div>
-    <table class="w3-table w3-card-4">
+    <table class="w3-table w3-stiped w3-card-4">
         <th>Materia</th><th>Prima</th><th>Seconda</th><th>Terza</th><th>Quarta</th><th>Quinta</th>
         {%for riga in righe_orario%}
            <tr>
