--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -20,6 +20,8 @@
         {{pagina.descrizione|safe}}
     </div>
     <table class="w3-table w3-striped w3-card-4">
+        <th></th><th colspan=2>Biennio</th><th colspan="2">Secondo biennio</th><th></th>
+        <tr>
         <th>Materia</th><th>Prima</th><th>Seconda</th><th>Terza</th><th>Quarta</th><th>Quinta</th>
         {%for riga in righe_orario%}
            <tr>
