--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -17,7 +17,7 @@
         {{pagina.descrizione|safe}}
     </div>
     <table class="w3-table w3-striped w3-card-4">
-        <th></th><th class= "intestazione" colspan=2>Biennio</th><th class= "intestazione" colspan="2">Secondo biennio</th><th></th>
+        <th></th><th class="intestazione" colspan=2>Primo Biennio</th><th class= "intestazione" colspan="2">Secondo biennio</th><th></th>
         <tr>
         <th>Materia</th><th>Prima</th><th>Seconda</th><th>Terza</th><th>Quarta</th><th>Quinta</th>
         {%for riga in righe_orario%}
