--- a/openday/templates/openday/presenze.html
+++ b/openday/templates/openday/presenze.html
@@ -36,7 +36,8 @@
                 <td class="nome">{{v.visitatore.cognome}} {{v.visitatore.nome}}</td>
                 <td>
                   {%if v.presente%}
-                    <img class=spunta src="/orienta/static/openday/spunta.png" alt='presente'>
+                <!-- <img class=spunta src="/orienta/static/openday/spunta.png" alt='presente'> -->
+                <img class=spunta src="{%static 'openday/spunta.png'%}" alt='presente'>
                   {%endif%}
                 </td>
             </tr>
