--- a/openday/templates/openday/index.html
+++ b/openday/templates/openday/index.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-<div class="w3-container" style="text-align:center">
+<div class="w3-container">
      
       {%for new in novita%}
       <h2>{{new.titolo}} </h2>
