riduzione 70% testo index

--- a/openday/templates/openday/index.html
+++ b/openday/templates/openday/index.html
@@ -6,7 +6,7 @@
 <style>
      
       h2   {text-align:center; color: blue;}
-      .news {text-align: left;}
+      .news {text-align: left; width:70%; margin:auto}
 </style>
 
 {%endblock %}
