gallery stess altezza

--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -7,7 +7,7 @@
 
  h2 {text-align: center; color: blue}
 .gallery {display: flex}
-.imagebox {width:150px;}
+.imagebox {height:150px;}
 .imagebox img {width: 100%}
 
 </style>
