--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -87,6 +87,8 @@
                 </div>
             </div>
 
+            <a href="{% url 'openday:gallery' %}" class="w3-bar-item w3-button ">Gallery</a>
+
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Autenticazione</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
