titolo alle img

--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -28,6 +28,7 @@ a {cursor:pointer;}
       <div class="imagebox">
         
         <a href="/orienta{{imm.immagine.url}}">   <img src="/orienta{{imm.immagine.url}}"> </a>
+        <h4>{{imm.titolo}}</h4>
 
       </div>
 
