centrate le immagini

--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -7,8 +7,8 @@
 
  h2 {text-align: center; color: blue}
 .gallery {display: flex}
-.imagebox {height:120px;}
-.imagebox img {height: 100%}
+.imagebox {height:120px; text-align:center}
+.imagebox img {height: 100%; }
 a {cursor:pointer;}
 
 </style>
