--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -7,7 +7,7 @@
 
  h2 {text-align: center; color: blue}
 .gallery {display: flex}
-.imagebox {height:120px; text-align:center}
+.imagebox {height:120px; text-align:center; margin-right:5px;}
 .imagebox img {height: 100%; }
 a {cursor:pointer;}
 
