path relativo in login

--- a/openday/templates/openday/base.html
+++ b/openday/templates/openday/base.html
@@ -93,7 +93,7 @@
                 <button class="w3-button">Autenticazione</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     <a href="{%url 'admin:index'%}" class="w3-bar-item w3-button ">Admin</a>
-                    <a href="{% url 'openday:mioLogin' %}?next=/orienta/openday" class="w3-bar-item w3-button ">Login</a>
+                    <a href="{% url 'openday:mioLogin' %}?next=orienta/openday" class="w3-bar-item w3-button ">Login</a>
                     <a href="{% url 'openday:logout_view' %}" class="w3-bar-item w3-button ">Logout</a>
                     <a href="" class="w3-bar-item w3-button ">Cambio Password</a>
                 </div>
