banner tolto .url

--- a/openday/templates/openday/indirizzo.html
+++ b/openday/templates/openday/indirizzo.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <div class="w3-container" style="text-align:left; width:75%; margin:auto;">
-    <img src='/orienta{{pagina.banner.url}}'>
+    <img src='/orienta{{pagina.banner}}'>
     <h2>{{pagina.titolo}}</h2>
     <div class="testo">
         {{pagina.descrizione|safe}}
