link a dettaglio proposte

--- a/tutor/templates/tutor/elenco_adesioni.html
+++ b/tutor/templates/tutor/elenco_adesioni.html
@@ -24,7 +24,7 @@
             {{proposta.iscrizioni.all|length}}
         </td>
         <td>
-           
+            <td><img class="icona" src="{%static 'tutor/gnome-help.png' %}" onclick="dettaglio({{prop.id}})"> </td>
         </td>
     </tr>
 
