--- a/tutor/templates/tutor/elenco_adesioni.html
+++ b/tutor/templates/tutor/elenco_adesioni.html
@@ -38,7 +38,7 @@
             {{proposta.iscrizioni.all|length}}
         </td>
         <td>
-            <td><img class="icona" src="{%static 'tutor/gnome-help.png' %}" onclick="dettaglio({{prop.id}})"> </td>
+            <td><img class="icona" src="{%static 'tutor/gnome-help.png' %}" onclick="dettaglio({{proposta.id}})"> </td>
         </td>
     </tr>
 
