mostra e non Guarda

--- a/tutor/templates/tutor/proposte.html
+++ b/tutor/templates/tutor/proposte.html
@@ -31,7 +31,7 @@
             <th>Ente</th>
             <th>Data Inizio</th>
             <th>Data Fine</th>
-            <th>Guarda</th>
+            <th>Mostra</th>
             {%for prop in proposte %}
             <tr>
                 <td>  {{prop.nome_progetto}}</td>
