--- a/tutor/templates/tutor/elenco_adesioni.html
+++ b/tutor/templates/tutor/elenco_adesioni.html
@@ -5,6 +5,7 @@
 <style>
      h2 {text-align: center; color:blue}
     .icona {cursor: pointer;}
+    .casella {text-align: left;}
 </style>
 
 <script>
@@ -38,7 +39,7 @@
             {{proposta.iscrizioni.all|length}}
         </td>
         <td>
-            <td><img class="icona" src="{%static 'tutor/gnome-help.png' %}" onclick="dettaglio({{proposta.id}})"> </td>
+            <td class="casella"><img class="icona" src="{%static 'tutor/gnome-help.png' %}" onclick="dettaglio({{proposta.id}})"> </td>
         </td>
     </tr>
 
