--- a/tutor/templates/tutor/elenco_adesioni.html
+++ b/tutor/templates/tutor/elenco_adesioni.html
@@ -25,7 +25,7 @@
 <div class="w3-container" style="width: 70%; margin:auto;">
 
     <table class="w3-table-all w3-card-4">
-    <th> Proposta </th><th>Referenti</th><th>Iscritti</th><th style="text-align:right">Mostra</th>
+    <th> Proposta </th><th>Referenti</th><th>Iscritti</th><th>Mostra</th>
 
     {% for proposta in selezione %}    
 
@@ -38,7 +38,7 @@
             {{proposta.iscrizioni.all|length}}
         </td>
         <td>
-            <td><img class="icona" src="{%static 'tutor/gnome-help.png' %}" onclick="dettaglio({{proposta.id}})"> </td>
+            <img class="icona" src="{%static 'tutor/gnome-help.png' %}" onclick="dettaglio({{proposta.id}})">
         </td>
     </tr>
 
