--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -27,11 +27,12 @@ a {cursor:pointer;}
 
       <div class="imagebox">
         
-        
-        <a href="/orienta{{imm.immagine.url}}">   <img src="/orienta{{imm.immagine.url}}"> </a>
+        {%if imm.immagine %}
+           <a href="/orienta{{imm.immagine.url}}">   <img src="/orienta{{imm.immagine.url}}"> </a>
+        {%endif%}
         <br>
         {%if imm.url %}
-            <a href="{{imm.url}}">VIDEO</a>
+            <a href="{{imm.url}}"> <img src="/orienta{% static 'openday/youtube.png' %}"></a><br>
         {%endif%}
         {{imm.titolo}}
      
