--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -9,6 +9,7 @@
 .gallery {display: flex}
 .imagebox {height:120px; text-align:center; margin-right:10px;}
 .imagebox img {height: 100%; }
+.youtube {width:48px;}
 a {cursor:pointer;}
 
 </style>
@@ -28,11 +29,11 @@ a {cursor:pointer;}
       <div class="imagebox">
         
         {%if imm.immagine %}
-           <a href="/orienta{{imm.immagine.url}}">   <img src="/orienta{{imm.immagine.url}}"> </a>
+           <a href="orienta{{imm.immagine.url}}">   <img src="orienta{{imm.immagine.url}}"> </a>
         {%endif%}
         <br>
         {%if imm.url %}
-            <a href="{{imm.url}}"> <img src="/orienta{% static 'openday/youtube.png' %}"></a><br>
+            <a href="{{imm.url}}"> <img class=youtube src="/orienta{% static 'openday/youtube.png' %}"></a><br>
         {%endif%}
         {{imm.titolo}}
      
