--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -29,7 +29,7 @@ a {cursor:pointer;}
       <div class="imagebox">
         
         {%if imm.immagine %}
-           <a href="/orienta{{imm.immagine.url}}">   <img src="orienta{%static 'imm.immagine'%}"> </a>
+           <a href="/orienta{{imm.immagine.url}}">   <img src="openday{%static 'imm.immagine'%}"> </a>
         {%endif%}
         <br>
         {%if imm.url %}
