--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -29,11 +29,11 @@ a {cursor:pointer;}
       <div class="imagebox">
         
         {%if imm.immagine %}
-           <a href="/orienta{{imm.immagine.url}}">   <img src="/orienta/openday{{imm.immagine.url}}"> </a>
+           <a href="/orienta{{imm.immagine.url}}"> <img src="/orienta/openday{{imm.immagine.url}}"> </a>
         {%endif%}
         <br>
         {%if imm.url %}
-            <a href="{{imm.url}}"> <img class=youtube src="orienta{% static 'openday/youtube.png' %}"></a><br>
+            <a href="{{imm.url}}"> <img class=youtube src="/orienta{% static 'youtube.png' %}"></a><br>
         {%endif%}
         {{imm.titolo}}
      
