--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -33,7 +33,7 @@ a {cursor:pointer;}
         {%endif%}
         <br>
         {%if imm.url %}
-            <a href="{{imm.url}}"> <img class=youtube src="/orienta{% static 'youtube.png' %}"></a><br>
+            <a href="{{imm.url}}"> <img class=youtube src="{% static 'openday/youtube.png' %}"></a><br>
         {%endif%}
         {{imm.titolo}}
      
