--- a/openday/templates/openday/gallery.html
+++ b/openday/templates/openday/gallery.html
@@ -9,7 +9,7 @@
 .gallery {display: flex}
 .imagebox {height:120px; text-align:center; margin-right:10px;}
 .imagebox img {height: 100%; }
-.youtube {height:24px;}
+.youtube {height:12px;}
 a {cursor:pointer;}
 
 </style>
@@ -29,7 +29,7 @@ a {cursor:pointer;}
       <div class="imagebox">
         
         {%if imm.immagine %}
-           <a href="/orienta{{imm.immagine.url}}"> <img src="/orienta{{imm.immagine.url}}"> </a>
+           <a href="/orienta{{imm.immagine.url}}"> <img src="{{imm.immagine.url}}"> </a>
         {%endif%}
         <br>
         {%if imm.url %}
